style.css
body {
  font-family: 'Segoe UI', Tahoma, sans-serif;
  margin: 0;
}

nav {
  background-color: rgba(0, 0, 0, 0.7);
  backdrop-filter: blur(5px);
  position: relative;
  z-index: 2;
  border-bottom: 1px solid rgba(255,255,255,0.2);
}

nav ul {
  list-style: none;
  display: flex;
  justify-content: center;
  gap: 50px;
  padding: 10px;
  margin: 0;
}

nav a {
  text-decoration: none;
  color: white;
  font-size: 16px;
  position: relative;
  transition: 0.3s;
}

nav a:hover {
  color: orange;
}

nav a::after {
  content: "";
  position: absolute;
  width: 0;
  height: 2px;
  background: orange;
  left: 0;
  bottom: -4px;
  transition: 0.3s;
}

nav a:hover::after {
  width: 100%;
}

.close {
  display: none;
}

.grid {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 20px;
}

.box {
  background-color: white;
  padding: 30px;
  border: 1px solid black;
  text-align: center;
}

footer {
  background-color: #333;
  color: white;
  text-align: center;
  padding: 10px;
}

.menu-icon {
  display: none;
  position: absolute;
  top: 8px;
  left: 10px;
  z-index: 3;
  font-size: 24px;
  padding: 6px 10px;
  background-color: #333;
  color: white;
  text-decoration: none;
}

#bg-video {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  z-index: -1;
}

html, body {
  height: 100%;
}

body {
  display: flex;
  flex-direction: column;
}

main {
  flex: none;
}

.hero {
  color: white;
  height: calc(100vh - 50px);
  animation: fadeIn 2s;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  gap: 12px;
  background-color: rgba(0, 0, 0, 0.6);
}

@keyframes fadeIn {
  from { opacity: 0; }
  to { opacity: 1; }
}

.hero h1 {
  font-size: 90px;
  margin: 0;
}

.subtitle {
  color: rgb(187, 179, 166);
  margin: 6px 0;
  font-size: 20px;
}

.intro {
  margin: 0;
}

.intro p {
  font-size: 20px;
  margin: 0;
}

.intro h2 {
  font-size: 36px;
  margin: 5px 0;
}

@media (max-width: 800px) {

  .menu-icon {
    display: block;
  }

  nav {
    display: none;
    position: absolute;
    width: 100%;
    top: 40px;
    left: 0;
    z-index: 2;
  }

  nav:target {
    display: block;
  }

  nav ul {
    flex-direction: column;
    text-align: center;
  }

  .hero {
    height: auto;
    padding: 20px;
  }

  .hero h1 {
    font-size: 45px;
  }

  .intro h2 {
    font-size: 26px;
  }
}

